apps/base/media/lidarr/lidarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://lidarr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Lidarr"
    gethomepage.dev/description: "Music organizer/manager"
    gethomepage.dev/app: lidarr
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/lidarr.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`lidarr.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: lidarr
          port: 8686
  tls: {}
